c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_declarations/extern_follows_static_local_var.c
int main(void) {
    /* This declaration has no linkage. */
    static int x  = 0;
    /* This declaration has external linkage,
     * so it conflict with the previous declaration
     * that has no linkage. */
    extern int x;
    return x;
}